--- a/server/build.gradle
+++ b/server/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	/*compile 'org.springframework.boot:spring-boot-starter-security'*/
 }
 
