--- a/server/build.gradle
+++ b/server/build.gradle
@@ -40,6 +40,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compile 'org.springframework.boot:spring-boot-starter-security'
 	compile 'com.google.guava:guava:28.0-jre'
+
+	implementation 'org.springframework.session:spring-session-core'
+	implementation 'org.springframework.session:spring-session-jdbc'
 }
 
 test {
