--- a/server/build.gradle
+++ b/server/build.gradle
@@ -38,7 +38,11 @@ dependencies {
 	}
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	/*compile 'org.springframework.boot:spring-boot-starter-security'*/
+	compile 'org.springframework.boot:spring-boot-starter-security'
+	compile 'com.google.guava:guava:28.0-jre'
+
+	implementation 'org.springframework.session:spring-session-core'
+	implementation 'org.springframework.session:spring-session-jdbc'
 }
 
 test {
